== Changelog ==

= 1.1.3 - 12-04-2018 =
* Fix - Per page entries in list table.
* Fix - Clone field next to it not at last.
* Fix - Empty field ID if meta key is renamed.
* Fix - Use wp_kses_post to save tinymce value.
* Tweak - jQuery-confirm JS alert library styles.
* Tweak - Horizontal scroll bar issue on frontend.
* Dev - Introduced new `EVF_Background_Process` abstract class.

= 1.1.2 - 29-03-2018 =
* Fix - Exclude CPT data from search.

= 1.1.1 - 23-03-2018 =
* Fix - Custom email message issue.

= 1.1.0 - 12-03-2018 =
* Feature - Entries panel to save form in database.

= 1.0.3 - 23-02-2018 =
* Fix - From email issue fix for default form

= 1.0.2 - 15-02-2018 =
* Fix - Box-sizing issue with list tables.
* Fix - Header already sent error on plugin activation.
* Tweak - Refactor list tables and menu related hooks placement.

= 1.0.1 - 13-02-2018 =
* Feature - JS validation on submit.
* Fix - Select field option display.
* Fix - Checkbox validation styling.
* Fix - Create default form on first install.

= 1.0.0 - 02-02-2018 =
* Initial Release